--- a/core-reports-jasper-lib/pom.xml
+++ b/core-reports-jasper-lib/pom.xml
@@ -7,13 +7,13 @@
 	<name>core-reports-jasper-lib</name>
 	<description>core-reports-jasper-lib</description>
 
- 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.7</jdk.version>
 		<junit.version>4.12</junit.version>
-		<spring.version>4.2.4.RELEASE</spring.version>	
+		<spring.version>4.2.4.RELEASE</spring.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>es.satec.igeo.silcam.core</groupId>
@@ -27,6 +27,22 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.2.0</version>
 		</dependency>
+
+		<!-- POI es necesario para generar ficheros excell, word... de Microsoft 
+			office -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.13</version>
+		</dependency>
+<!--
+		<dependency>
+			<groupId>net.sourceforge.jexcelapi</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.6.12</version>
+		</dependency>
+  -->
+
 
 		<!-- junit -->
 		<dependency>
@@ -49,7 +65,6 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.3-1100-jdbc41</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
